--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/three": "^0.103.2",
     "adm-zip": "^0.4.16",
+    "archiver": "^5.0.2",
     "babel-core": "^6.26.3",
     "babel-preset-stage-2": "^6.24.1",
     "debug": "^4.1.1",
